--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <h1>NG2 + MEAN Stack</h1>
-
+  MEAN = Full-Stack JavaScript Using MongoDB, Express, AngularJS 2 & NodeJS
 
   </body>
 </html>
