--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <title>Daniel's To DO App (NG2 + MEAN Stack!)</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
@@ -24,6 +25,10 @@
     <h1>NG2 + MEAN Stack</h1>
     MEAN = Full-Stack JavaScript Using MongoDB, Express, AngularJS 2 & NodeJS
 
+      <h5>Bootstrap Active!</h5>
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
   </body>
 </html>
