setup ui in NG2

--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -2,16 +2,18 @@
     <h1>Add a ToDo Task</h1>
 
     <div class="form-group">
-      <input class="form-control input-lg" placeholder... >
+      <input class="form-control input-lg" placeholder="Add TO-DO &hellip;" autofocus #todotext>
       <br />
-      <button></button>
+      <button class="btn btn-primary btn-block">Create</button>
     <div>
 
       <hr />
   </div>
 
 <div class="todo-list">
-  <div class="alert alert-info text-center" [hidden]="todo.length > 0"
-    <h3></h3>
+  <div class="alert alert-info text-center" [hidden]="todo.length > 0">
+    <h3>
+
+    </h3>
   </div>
 </div>
