fix routes for ToDo's

--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -13,7 +13,7 @@
 <div class="todo-list">
   <div class="alert alert-info text-center" [hidden]="todo.length > 0">
     <h3>
-
+      Title: {{}}  
     </h3>
   </div>
 </div>
