added more function

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">MEAN ToDo App</a>
+              <a class="navbar-brand" href="#">MEAN To-Do App</a>
             </div>
 
           </div>
@@ -17,7 +17,7 @@
     <div class="col-md-8 col-md-offset-2">
 
       <todos></todos>
-      
+
     </div>
   </div>
 </div>
