--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -15,6 +15,10 @@
     <h3>No To-Do's</h3>
   </div>
 
+  <div>
+    Testing
+  </div>
+
   <div class="col-md-1">
     <input type="checkbox" name="name" value="">
   </div>
