--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -1,37 +1,28 @@
   <div class="add-todo-form text-center">
     <h1>Add a ToDo Task</h1>
-
     <div class="form-group">
-      <input class="form-control input-lg" placeholder="Add TO-DO &hellip;" autofocus #todotext>
+      <input class="form-control input-lg" placeholder="Add a TO-DO &hellip;" autofocus #todotext>
       <br />
       <button class="btn btn-primary btn-block">Create</button>
-    <div>
-
-      <hr />
+    </div>
   </div>
 
 <div class="todo-list">
-  <div class="alert alert-info text-center" [hidden]="todo.length > 0">
-    <h3>No To-Do's</h3>
+  <div class="alert alert-info text-center" [hidden]="todos.length > 0">
+    <h3>No To-Do's to do ... lol</h3>
   </div>
 
-  <div>
-    Testing
+  <div *ngFor="let todo of todos" class="col-md-12 todo">
+    <div class="col-md-1">
+      <input type="checkbox">
+    </div>
+    <div class="col-md-7">
+      {{todo.text}}
+    </div>
+    <div class="col-md-4 btn">
+      <!-- Delete Button -->
+      <input type="button" value="Delete" class="btn btn-danger pull-right">
+      <input type="button" value="Edit" class="btn btn-primary pull-right">
+    </div>
   </div>
-
-  <div class="col-md-1">
-    <input type="checkbox" name="name" value="">
-  </div>
-
-  <div class="col-md-7">
-    Some ToDo's ?
-
-  </div>
-  <div class="col-md-4 btn">
-    <!-- Delete Button -->
-    <input type="button" name="name" value="Delete" class="btn btn-danger pull-right">
-    <input type="button" name="name" value="Edit" class="btn btn-primary pull-right">
-
-  </div>
-
 </div>
