modify files, drop one

--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -9,7 +9,7 @@
 
 <div class="todo-list">
   <div class="alert alert-info text-center" [hidden]="todos.length > 0">
-    <h3>No To-Do's to do ... lol</h3>
+    <h3>No To-Do's yet</h3>
   </div>
   <div *ngFor="let todo of todos" class="col-md-12 todo">
     <div class="col-md-1">
