--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -16,7 +16,7 @@
       <input type="checkbox">
     </div>
     <div class="col-md-7">
-      <!-- {{todo.text}} -->
+      {{todo.text}} 
     </div>
     <div class="col-md-4 btns">
       <input type="button" value="Edit" class="btn btn-primary pull-right">
