going to take a break

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -12,7 +12,7 @@
 
           </div>
         </nav>
-<div class="containter">
+<div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
 
