--- a/views/index.html
+++ b/views/index.html
@@ -22,8 +22,10 @@
   <body>
     <my-app>Loading...</my-app>
 
+    <div id="MeanNinja"></div>
+    
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>    
+    
   </body>
 </html>
