--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -1,7 +1,7 @@
   <div class="add-todo-form text-center">
     <h1>Add a ToDo Task</h1>
     <div class="form-group">
-      <input class="form-control input-lg" placeholder="Add a TO-DO &hellip;" autofocus #todotext>
+      <input class="form-control input-lg" placeholder="Add a Task &hellip;" autofocus #todotext>
       <br />
       <button (click)="addTodo($event, todotext)" class="btn btn-primary btn-block">Create</button>
     </div>
@@ -13,19 +13,25 @@
   </div>
   <div *ngFor="let todo of todos" class="col-md-12 todo">
     <div class="col-md-1">
-      <input type="checkbox">
+      <input type="checkbox" [checked]="todo.isCompleted" (click)="updatesStatus(todo)">
     </div>
     <div class="col-md-7">
       <span [class.hidden]="todo.isEditMode">{{todo.text}}</span>
-      <input type="text" [class.hidden]="!todo.isEditMode" [value]="todo.text" (keypress)="updateTodoText($event, todo)" />
-      <input type="button" [class.hidden]="!todo.isEditMode" value="Cancel" (click)="setEditState(todo, false)" class="btn btn-warning" />
-      {{todo.text}}
-      
+      <input type="text" [class.hidden]="!todo.isEditMode" [value]="todo.text" (keypress)="updatesTodoText($event, todo)" />
+      <input type="button" [class.hidden]="!todo.isEditMode" value="Cancel&nbsp;&dagger;" (click)="setEditState(todo, false)" class="btn btn-warning" />
     </div>
     <div class="col-md-4 btns">
-      <input type="button" (click)="setEditState(todo, false)" value="Edit" class="btn btn-primary pull-right">
-      <input type="button" [class.disabled]="todo.isCompleted" (click)="setEditState(todo, true)" value="Delete" class="btn btn-danger pull-right">
+      
+      <input type="button" (click)="setEditState(todo, false)"
+      value="Delete" class="btn btn-danger pull-right">
+      
+      <input type="button" [class.disabled]="todo.isCompleted" 
+      (click)="setEditState(todo, true)" value="Edit" 
+      class="btn btn-primary pull-right">
       
     </div>
+     
+     
   </div>
+  &dagger; Press <strong>Enter</strong> to Save Changes
 </div>
